--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -55,6 +55,10 @@ div.dSocMediaWidgets {
     padding: 0.5em;
 }
 
+div.fb-like {
+    vertical-align: middle;
+}
+
 
 /* Body content */
 div.content {
