--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -54,6 +54,9 @@ div.dSocMediaWidgets {
     float: right;
     padding: 0.5em;
     vertical-align: middle;
+    margin: 0.5em;
+    padding: 0.5em;
+    background-color: red;
 }
 
 
