--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -58,7 +58,6 @@ div.dSocMediaWidgets {
 }
 
 div.fb-like {
-    background-color: yellow;
     padding: 0;
     margin: 0;
 }
@@ -213,7 +212,7 @@ a.navLink {
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #FFFFFF;
+        background-color: #c0c0c0;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         border-radius: 1em;
