--- a/KidsAtHomeV3-small.css
+++ b/KidsAtHomeV3-small.css
@@ -205,7 +205,7 @@ a.navLink {
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #FFFFFF;
+        background-color: #c0c0c0;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         border-radius: 1em;
