--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -37,7 +37,7 @@ p.pPgTitle {
 .aPgTitleContentPages {
     color: #FFFF00;
     text-align: left;
-    margin: 1em;
+    margin: 0.5em;
     font-size: 2em;
     padding: 0.5em;
     width: 30%;
@@ -48,6 +48,12 @@ p.pPgTitle {
     transform: rotate(-10deg);
     
     text-decoration: none;
+}
+
+/* Hamburger menu icon and email icon */
+i.material-icons {
+    font-size: 1.5em;
+    color: #FFFF00;
 }
 
 /* Social Media Widgets */
