--- a/KidsAtHomeV3-small.css
+++ b/KidsAtHomeV3-small.css
@@ -47,6 +47,12 @@ div.header {
     text-decoration: none;
 }
 
+/* Hamburger menu icon and email icon*/
+i.material-icons {
+    font-size: 1em;
+    color: #FFFF00;
+}
+
 
 /* Social Media Widgets */
 div.dSocMediaWidgets {
