--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -61,22 +61,32 @@ a.menuIcon {
     padding: 0;
 }
 
-div.dropdown-content {
-    -webkit-transform: translate(-240px, 0); /* For Safari 3.1 to 6.0 */
-    -moz-transform: translate(-240px, 0); /* mozilla */
-    -ms-transform: translate(-240px, 0);
-    transform: translate(-240px, 0);
-    -webkit-transition: transform 0.35s;
-    -moz-transition: transform 0.35s;
-    -ms-transition: transform 0.35s;
-    transition: transform 0.35s;
+/*div.overlay-menu {
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF;
+    text-align: center;
+
 }
 
-/* fade in checked menu */    
+
+div.dropdown-content {
+    -webkit-transform: translate(-2000px, 0); 
+    -moz-transform: translate(-2000px, 0); 
+    -ms-transform: translate(-2000px, 0);
+    transform: translate(-2000px, 0);
+    -webkit-transition: transform 1s;
+    -moz-transition: transform 1s;
+    -ms-transition: transform 1s;
+    transition: transform 1s;
+}
+*/
+/* fade in checked menu */
+/*
 .menu-checkbox:checked + .dropdown-content {
   transform: translate3d(0, 0, 0);
 }
-
+*/
 /* Social Media Widgets */
 div.dSocMediaWidgets {
     float: right;
@@ -197,6 +207,103 @@ a.navLink {
     font-size: 2em;
     padding: 0.1em;
     text-decoration: none;
+   }
+   
+    .overlay-menu {
+	position: fixed;
+	text-align: center;
+	overflow: hidden;
+	z-index: -1;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	background: rgba(0,0,0,0.8);
+	-webkit-transition: all 0.3s ease-in-out; 
+	-moz-transition: all 0.3s ease-in-out; 
+	-o-transition: all 0.3s ease-in-out; 
+	transition: all 0.3s ease-in-out;
+}
+   
+   ul {
+	position: relative;
+	top: 20%;
+	-webkit-transform: scale(2);
+	-moz-transform: scale(2);
+	-ms-transform: scale(2);
+	transform: scale(2);
+	-webkit-transition: all 0.3s ease-in-out; 
+	-moz-transition: all 0.3s ease-in-out; 
+	-o-transition: all 0.3s ease-in-out; 
+	transition: all 0.3s ease-in-out;
+}
+
+li { 
+	display: inline-block; 
+	margin: 20px;
+}
+
+li a {
+	border-radius: 3px;
+	padding: 15px;
+	border: 1px solid transparent;
+	text-decoration: none;
+	font-size: 18px;
+	color: #fff;
+	-webkit-transition: all 0.2s ease-in-out; 
+	-moz-transition: all 0.2s ease-in-out; 
+	-o-transition: all 0.2s ease-in-out; 
+	transition: all 0.2s ease-in-out;
+}
+
+li a:hover { border-color: #fff; }
+
+li a i { 
+	margin-right: 5px; 
+	font-size: 24px;
+}
+
+#toggle-nav-label {
+	color: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.2);
+	text-align: center;
+	line-height: 30px;
+	font-size: 16px;
+	display: block;
+	cursor: pointer;
+	position: relative;
+	z-index: 500;
+	width: 30px;
+	height: 30px;
+	border-radius: 5px;
+}
+
+/*#menu { display: none; }*/
+
+#menu:checked ~ .overlay-menu { 
+	opacity: 1;
+	z-index: 400;
+}
+
+#menu:checked ~ .overlay-menu ul {
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+}
+
+#menu:checked ~ #toggle-nav-label { 
+	background: #fff; 
+	color: rgba(0,0,0,0.8);
+}
+   
+   /*a.aContentPagesNav{
+    color: #FFFF00;
+    text-align: left;
+    font-size: 2em;
+    padding: 0.1em;
+    text-decoration: none;
     border-radius: 1em;
    }
    
@@ -207,9 +314,9 @@ a.navLink {
     padding: 0;
     overflow: hidden;
     background-color: transparent;
-    z-index: 2; /* set z-index of all list item s for dropdown nav to be higher than content so nav appears on top*/
-    }
+    z-index: 2;} /* set z-index of all list item s for dropdown nav to be higher than content so nav appears on top*/
     
+    /*
     li {
         float: left;
         z-index: 2;
@@ -263,7 +370,7 @@ a.navLink {
     .dropdown:hover .dropdown-content {
         display: block;
     }
-
+*/
 
    
    /* Content Text */
