--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -209,7 +209,7 @@ a.navLink {
     text-decoration: none;
    }
    
-    .overlay-menu {
+    .box {
 	position: fixed;
 	text-align: center;
 	overflow: hidden;
@@ -250,7 +250,7 @@ li a {
 	border: 1px solid transparent;
 	text-decoration: none;
 	font-size: 18px;
-	color: #fff;
+	color: #FFFF00;
 	-webkit-transition: all 0.2s ease-in-out; 
 	-moz-transition: all 0.2s ease-in-out; 
 	-o-transition: all 0.2s ease-in-out; 
@@ -265,7 +265,7 @@ li a i {
 }
 
 #toggle-nav-label {
-	color: rgba(0,0,0,0.5);
+	color: #FFFF00;
 	background: rgba(0,0,0,0.2);
 	text-align: center;
 	line-height: 30px;
@@ -279,14 +279,14 @@ li a i {
 	border-radius: 5px;
 }
 
-/*#menu { display: none; }*/
+#menu { display: none; }
 
-#menu:checked ~ .overlay-menu { 
+#menu:checked ~ .box { 
 	opacity: 1;
 	z-index: 400;
 }
 
-#menu:checked ~ .overlay-menu ul {
+#menu:checked ~ .box ul {
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
 	-ms-transform: scale(1);
@@ -294,8 +294,8 @@ li a i {
 }
 
 #menu:checked ~ #toggle-nav-label { 
-	background: #fff; 
-	color: rgba(0,0,0,0.8);
+	background: #FFFFFF; 
+	color: #FFFF00;
 }
    
    /*a.aContentPagesNav{
