--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -209,7 +209,7 @@ a.navLink {
     text-decoration: none;
    }
    
-    .box {
+    .dContentMenu {
 	position: fixed;
 	text-align: center;
 	overflow: hidden;
@@ -241,15 +241,15 @@ a.navLink {
 
 li { 
 	display: inline-block; 
-	margin: 20px;
+	margin: 1.25em;
 }
 
-li a {
-	border-radius: 3px;
-	padding: 15px;
-	border: 1px solid transparent;
+li a.contentMenuLink {
+	border-radius: 2em;
+	padding: 1em;
+	border: 0.1em solid transparent;
 	text-decoration: none;
-	font-size: 18px;
+	font-size: 1.5em;
 	color: #FFFF00;
 	-webkit-transition: all 0.2s ease-in-out; 
 	-moz-transition: all 0.2s ease-in-out; 
@@ -257,120 +257,51 @@ li a {
 	transition: all 0.2s ease-in-out;
 }
 
-li a:hover { border-color: #fff; }
+li a.contentMenuLink:hover {
+    border-color: #FFFFFF;
+    background-color: #FFFFFF;
+    opacity: 0.9;
+    }
 
-li a i { 
-	margin-right: 5px; 
-	font-size: 24px;
+li a.contentMenuLink i { 
+	margin-right: 0.25em; 
+	font-size: 1.6em;
 }
 
-#toggle-nav-label {
+#toggleMenuLabel {
 	color: #FFFF00;
 	background: rgba(0,0,0,0.2);
 	text-align: center;
-	line-height: 30px;
-	font-size: 16px;
+	line-height: 2em;
+	font-size: 1em;
 	display: block;
 	cursor: pointer;
 	position: relative;
 	z-index: 500;
-	width: 30px;
-	height: 30px;
-	border-radius: 5px;
+	width: 2em;
+	height: 2em;
+	border-radius: 0.25em;
 }
 
-#menu { display: none; }
+#hamburgerMenu { display: none; }
 
-#menu:checked ~ .box { 
+#hamburgerMenu:checked ~ .dContentMenu { 
 	opacity: 1;
 	z-index: 400;
 }
 
-#menu:checked ~ .box ul {
+#hamburgerMenu:checked ~ .dContentMenu ul {
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
 	-ms-transform: scale(1);
 	transform: scale(1);
 }
 
-#menu:checked ~ #toggle-nav-label { 
+#hamburgerMenu:checked ~ #toggleMenuLabel { 
 	background: #FFFFFF; 
 	color: #FFFF00;
 }
    
-   /*a.aContentPagesNav{
-    color: #FFFF00;
-    text-align: left;
-    font-size: 2em;
-    padding: 0.1em;
-    text-decoration: none;
-    border-radius: 1em;
-   }
-   
-   
-   ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: transparent;
-    z-index: 2;} /* set z-index of all list item s for dropdown nav to be higher than content so nav appears on top*/
-    
-    /*
-    li {
-        float: left;
-        z-index: 2;
-    }
-    
-    li a {
-        display: inline-block;
-        color: #FFFF00;
-        text-align: center;
-        padding: 0.5em;
-        text-decoration: none;
-        font-size: 0.75em;
-        border-radius: 1em;
-        z-index: 2;
-    }
-    
-    li a:hover, .dropdown:hover {
-        background-color: #603C22;
-        border-radius: 1em;
-        z-index: 2;
-    }
-    
-    li.dropdown {
-        display: inline-block;
-        z-index: 2;
-    }
-    
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #c0c0c0;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        border-radius: 1em;
-        z-index: 2;
-        transition: width 0.35s;
-    }
-    
-    .dropdown-content a {
-        color: #FFFF00;
-        padding: 0.5em;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-        font-size: 0.75em;
-        z-index: 2;
-    }
-    
-    .dropdown-content a:hover {background-color: #603C22}
-    
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-*/
 
    
    /* Content Text */
