--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -61,32 +61,6 @@ a.menuIcon {
     padding: 0;
 }
 
-/*div.overlay-menu {
-    width: 100%;
-    height: 100%;
-    background-color: #FFFFFF;
-    text-align: center;
-
-}
-
-
-div.dropdown-content {
-    -webkit-transform: translate(-2000px, 0); 
-    -moz-transform: translate(-2000px, 0); 
-    -ms-transform: translate(-2000px, 0);
-    transform: translate(-2000px, 0);
-    -webkit-transition: transform 1s;
-    -moz-transition: transform 1s;
-    -ms-transition: transform 1s;
-    transition: transform 1s;
-}
-*/
-/* fade in checked menu */
-/*
-.menu-checkbox:checked + .dropdown-content {
-  transform: translate3d(0, 0, 0);
-}
-*/
 /* Social Media Widgets */
 div.dSocMediaWidgets {
     float: right;
@@ -130,6 +104,29 @@ div.content {
 /* Navigation Page */
 /* Set colour and style for nav links */
 
+.dNavPageMenu {
+	text-align: center;
+	width: 100%;
+    padding: 2em;
+}
+
+a.navPageMenuLink {
+	border-radius: 2em;
+	padding: 1em;
+	border: 0.1em solid transparent;
+	text-decoration: none;
+	font-size: 2em;
+	color: #FFFF00;
+    
+    -webkit-tap-highlight-color: #FFFFFF; /* change colour on hover for iOS touchscreens */
+}
+
+a.navPageMenuLink:hover {
+    border-color: #FFFFFF;
+    background-color: #FFFFFF;
+    opacity: 0.8;
+    }
+
 a.navLink {
     color: #603C22;
     text-align: center;
@@ -140,61 +137,29 @@ a.navLink {
 }
 
 
-/* Format main nav circles */
-   span.sCircle1 {
-    display: inline-block;
-    margin: 0.5em;
-    border-radius: 10em;
-    transition: width 1s, height 1s;
-    text-align: center;
-   }
-   
-   /* Set opacity and size */
-   .sCircle1 {
-    background: #FFFFFF;
-    padding: 5em;
-    width: 7em;
-    height: 7em;
-    opacity: 0.9;
-    filter: alpha(opacity=90); /* for IE8 and earlier */
-   }
-   
-   /* Set to grow on mouse over */
-   .sCircle1:hover {
-    width: 9em;
-    height: 9em;
-   }
-   
-   
-   /* Set attributes for longer words */
-   #sCircle15 {
-    /*display: table;*/
-   }
-   
-   #navLink15 {
-     letter-spacing: -0.1em;
-     font-size: 1.5em;
-     text-align: center;
-   }
    
    /* Content Pages */
    
    /* Content Title */
    div.dContentPgTitle {
-     text-align: center; 
+     text-align: center;
+     display: inline-block;
+     width: 100%;
    }
    
    p.pContentPgTitle {
+     text-align: center; 
      color: #FFFF00;
-     letter-spacing: 0.2em;
-     margin: 1em;
+     letter-spacing: 0.1em;
+     margin: 0.5em;
      font-size: 2.5em;
    }
    
    a.aContentPgTitleLink {
+     text-align: center; 
      color: #FFFF00;
-     letter-spacing: 0.2em;
-     margin: 1em;
+     letter-spacing: 0.1em;
+     margin: 0.5em;
      font-size: 2.5em;
      text-decoration: none;
    }
@@ -226,7 +191,7 @@ a.navLink {
 	transition: all 0.3s ease-in-out;
 }
    
-   ul {
+   ul.listContentMenu {
 	position: relative;
 	top: 20%;
 	-webkit-transform: scale(2);
@@ -239,12 +204,12 @@ a.navLink {
 	transition: all 0.3s ease-in-out;
 }
 
-li { 
+li.menuList { 
 	display: inline-block; 
 	margin: 1.25em;
 }
 
-li a.contentMenuLink {
+li.menuList a.contentMenuLink {
 	border-radius: 2em;
 	padding: 0.5em;
 	border: 0.1em solid transparent;
@@ -259,13 +224,13 @@ li a.contentMenuLink {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0.8);  /* change colour on hover for iOS touchscreens */
 }
 
-li a.contentMenuLink:hover {
+li.menuList a.contentMenuLink:hover {
     border-color: #FFFFFF;
     background-color: #FFFFFF;
-    opacity: 0.9;
+    opacity: 0.8;
     }
 
-li a.contentMenuLink i { 
+li.menuList a.contentMenuLink i { 
 	margin-right: 0.25em; 
 	font-size: 1.6em;
 }
@@ -292,7 +257,7 @@ li a.contentMenuLink i {
 	z-index: 400;
 }
 
-#hamburgerMenu:checked ~ .dContentMenu ul {
+#hamburgerMenu:checked ~ .dContentMenu ul.listContentMenu {
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
 	-ms-transform: scale(1);
