removed text fom background image and renamed it

--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -3,7 +3,7 @@ body {
     font-family: 'BigBottomCartoonRegular', sans-serif, Arial; 
     font-weight: normal; 
     font-style: normal;
-    background-image: url("12081-NO0THP.jpg");
+    background-image: url("KidsAtHomeBackground.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #EBFAFF;
