google plus 1 and facebook share
added google plus one button and changed facebook like button to facebook share button

--- a/KidsAtHomeV3-large.css
+++ b/KidsAtHomeV3-large.css
@@ -67,6 +67,11 @@ div.dSocMediaWidgets {
     padding: 0.5em;
 }
 
+div.fb-share-button {
+    float: right;
+    padding: 0;
+    margin: 0;
+}
 div.fb-like {
     float: right;
     padding: 0;
