--- a/KidsAtHomeV3-small.css
+++ b/KidsAtHomeV3-small.css
@@ -65,6 +65,11 @@ div.dSocMediaWidgets {
     vertical-align: middle;
 }
 
+div.fb-share-button {
+    float: right;
+    padding: 0;
+    margin: 0;
+}
 div.fb-like {
     float: right;
     padding: 0;
